--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,8 @@
 
 	<div class="jumbotron">
 	  <h1>SpotViz</h1>
-	  <p>Historical visualization of received JT65/JT9 signals received by Amateur Radio operators around the word.</p>
+	  <p>Historical visualization of received JT65/JT9 signals received by Amateur Radio operators 
+	  around the world.</p>
 		<p>By Kevin Hooke KK6DCT</p>
 	</div>
 
