js include order fixes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,17 +5,19 @@
 	<link href="css/bootstrap-3.3.4-dist/css/bootstrap.css" rel="stylesheet"/>
 	<link rel="stylesheet" href="css/callsignviz.css"/>
 
+	<!-- jQuery -->
+	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.css"/>
+	<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
+
 	<!-- Angular -->
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 
 	<!-- AngularJS ui-date -->
-	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.css"/>
-	<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
 	<script type="text/javascript" src="bower_components/angular-ui-date/src/date.js"></script>
 
-	
+	<!-- app js -->	
 	<script src="js/SpotVizApp.js"></script>
 	<script src="js/MapVizControllers.js"></script>
 	
