--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,10 @@
 	<!-- AngularJS ui-date -->
 	<script type="text/javascript" src="bower_components/angular-ui-date/src/date.js"></script>
 
+	<!-- AngularJS google maps -->
+	<script src="bower_components/lodash/dist/lodash.min.js"></script>
+	<script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+	
 	<!-- app js -->	
 	<script src="js/SpotVizApp.js"></script>
 	<script src="js/MapVizControllers.js"></script>
@@ -45,6 +49,10 @@
 		</nav>
 	
 		<div ng-view></div>
+		
+		<div class="row footer">
+			<div="col-md-12>Kevin Hooke KK6DCT</div>
+		</div>
 		
 	</div>
 
