--- a/src/main/webapp/mapviz/mapviz.html
+++ b/src/main/webapp/mapviz/mapviz.html
@@ -1,49 +1,65 @@
 <div ng-controller="SpotVizController">
-	<div class="row">
-		<form>
-			<div class="row">
-				<div class="col-md-3">
-					<label for="callsign">Callsign</label>
-				</div>
-				<div class="col-md-8">
-					<input id="callsign" type="text" ng-model="callsign" />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<label for="fromDate">Staring from date:</label>
-				</div>
-				<div class="col-md-8">
-					<input id="fromDate" ng-model="fromDate" ui-date-format="yy/mm/dd"
-						ui-date />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<label for="toDate">Ending at date:</label>
-				</div>
-				<div class="col-md-8">
-					<input id="toDate" ng-model="toDate" ui-date-format="yy/mm/dd"
-						ui-date />
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-md-3">
-					<button class="btn btn-default btn-primary" ng-click="retrieve()">Show
-						data</button>
+	<div class="row">
+		<div class="col-md-3">
+			<form>
+				<div class="row">
+					<div class="col-md-3">
+						<label for="callsign">Callsign</label>
+					</div>
+					<div class="col-md-8">
+						<input id="callsign" type="text" ng-model="callsign" />
+					</div>
 				</div>
+				<div class="row">
+					<div class="col-md-3">
+						<label for="fromDate">Staring from date:</label>
+					</div>
+					<div class="col-md-8">
+						<input id="fromDate" ng-model="fromDate" ui-date-format="yy/mm/dd"
+							ui-date />
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-3">
+						<label for="toDate">Ending at date:</label>
+					</div>
+					<div class="col-md-8">
+						<input id="toDate" ng-model="toDate" ui-date-format="yy/mm/dd"
+							ui-date />
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-3">
+						<button class="btn btn-default btn-primary" ng-click="retrieve()">Show
+							data</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div clas="col-md-9">
+			<div class="row">
+				<p>{{debugMsg}}</p>
+
+				<ul>
+					<li ng-repeat="spot in spots"><span>{{spot.spotter}} :
+							{{spot.word1}} {{spot.word2}} {{spot.word3}}
+							{{spot.spotDetail.errorMessage}} {{spot.spotDetail.longitude}}
+							{{spot.spotDetail.longitude}}</span></li>
+				</ul>
 				<div class="col-md-9">{{msg}}</div>
 			</div>
-		</form>
+			
+			<div class="row" >
+				<div class="angular-google-map-container">
+					<ui-gmap-google-map center='map.center' zoom='map.zoom'>
+						<ui-gmap-markers models="markers" coords="'self'" icon="'icon'"/>
+					</ui-gmap-google-map>
+				</div>
+			</div>
+			
+		</div>
 	</div>
-
-	<p>{{debugMsg}}</p>
-
-	<ul>
-		<li ng-repeat="spot in spots"><span>{{spot.spotter}} :
-				{{spot.word1}} {{spot.word2}} {{spot.word3}} </span></li>
-	</ul>
-
 </div>
 </div>
