ui and rest api updates

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,9 @@
 	<!-- Moment.js -->
 	<script src="bower_components/moment/moment.js"></script>
 	
+	<!-- Moment.js -->
+	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+	
 	<!-- app js -->	
 	<script src="js/SpotVizApp.js"></script>
 	<script src="js/MapVizControllers.js"></script>
