ui date handling

--- a/src/main/webapp/mapviz/mapviz.html
+++ b/src/main/webapp/mapviz/mapviz.html
@@ -18,7 +18,7 @@
 					</div>
 					<div class="col-md-8">
 						<input id="fromDate" class="form-control" ng-model="fromDate" ui-date-format="yy/mm/dd"
-							ui-date />
+							ui-date="fromDateOptions" />
                                                 <timepicker ng-model="fromTime" minute-step="minuteStep"></timepicker>
 
 					</div>
@@ -29,7 +29,7 @@
 					</div>
 					<div class="col-md-8">
 						<input id="toDate" class="form-control" ng-model="toDate" ui-date-format="yy/mm/dd"
-							ui-date />
+							ui-date="toDateOptions" />
                                                 <timepicker ng-model="toTime" minute-step="minuteStep"></timepicker>
                                         </div>
 				</div>
