--- a/src/main/webapp/mapviz/historyPlaybackControls.html
+++ b/src/main/webapp/mapviz/historyPlaybackControls.html
@@ -33,17 +33,20 @@
 				<button class="btn btn-primary" data-ng-click="stop()">
 					<span class="glyphicon glyphicon-pause" aria-hidden="true"></span>Pause
 				</button>
-				State: {{state}} / current progress value: {{currentValue}}
+				State: {{state}} / current progress value: {{currentValue}} / 
+				Debug: {{debugMsg}} 
 			<p>
 		</div>		
 	</div>
 	
 	<div class="row">
-	
 			<div class="col-sm-12">
 				<progressbar max="maxValue" value="currentValue" type="info"></progressbar>
 			</div>
+			<div></div><div></div>
 	</div>
-
+	<div class="row">
+			<div class="col-sm-2">{{selectedStartDateTime}}</div>
+			<div class="col-sm-offset-8 col-sm-2">{{selectedEndDateTime}}</div>
 </div>
 
