--- a/src/main/webapp/mapviz/mapviz.html
+++ b/src/main/webapp/mapviz/mapviz.html
@@ -46,12 +46,12 @@
 
 				<p>{{debugMsg}}</p>
 
-				<ul>
+				<!-- <ul>
 					<li ng-repeat="spot in spots"><span>{{spot.spotter}} :
 							{{spot.word1}} {{spot.word2}} {{spot.word3}}
 							{{spot.spotDetail.errorMessage}} {{spot.spotDetail.longitude}}
 							{{spot.spotDetail.longitude}}</span></li>
-				</ul>
+				</ul>  -->
 			</div>
 
 			<div class="row">
@@ -75,7 +75,7 @@
 			</div>
 
 			<div class="row" ng-if="showMap">
-				<div ng-include src="'mapviz/dateControls.html'"></div>
+				<div ng-include src="'mapviz/historyPlaybackControls.html'"></div>
 				<div class="angular-google-map-container">
 					<ui-gmap-google-map center='map.center' zoom='map.zoom'
 						refresh="showMap"> <ui-gmap-markers
