ui fixes and updates

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
 	<!-- Angular -->
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+	<script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
 
 	<!-- AngularJS ui-date -->
 	<script type="text/javascript" src="bower_components/angular-ui-date/src/date.js"></script>
@@ -52,13 +53,28 @@
 			<ul class="nav navbar-nav">
 				<li><a href="index.html#/">Home</a></li>
 				<li><a href="index.html#/mapviz">Visualize!</a></li>
-				<li><a href="">How to upload your spots</a></li>
+				<li><a href="index.html#/upload">How to upload your spots</a></li>
+				<li><a href="index.html#/faq">FAQ</a></li>
 				<li><a href="index.html#/about">About</a></li>
-				<li><a href="">FAQ</a></li>
+
 			</ul>
 		</nav>
 	
 		<div ng-view></div>
+		
+		<div class="row">
+		<div class="col-md-12">
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- spotviz 1 -->
+			<ins class="adsbygoogle"
+			     style="display:inline-block;width:728px;height:90px"
+			     data-ad-client="ca-pub-2688574285412762"
+			     data-ad-slot="5869936675"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+			</div>
+		</div>
 		
 		<div class="row footer">
 			<div class="col-md-12">Kevin Hooke KK6DCT</div>
