--- a/src/main/webapp/mapviz/mapviz.html
+++ b/src/main/webapp/mapviz/mapviz.html
@@ -1,94 +1,126 @@
 <div ng-controller="SpotVizController">
 
 	<div class="row">
-		<div class="col-md-3 form-group">
+
+		<div class="col-md-6">
+
+			<div class="row" ng-show="visualizeWelcome">
+				<div class="col-md-12">
+
+					<h3>Getting Started</h3>
+					<p>To visualize your historical data:</p>
+					<ol>
+						<li>Enter a callsign using the form to the right</li>
+						<li>If data is available for the entered callsign, select a
+							date range between which to animate the received callsigns on the
+							map.
+					</ol>
+
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<alert ng-show="msg">{{msg}}</alert>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<alert ng-show="errorMsg">{{errorMsg}}</alert>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default fadeInHideShow"
+						ng-show="numberOfSpots > 0">
+						<div class="panel-heading">
+							<h3 class="panel-title">Available data for callsign:
+								{{callsign}}</h3>
+						</div>
+						<div class="panel-body">
+
+							<p>Spots by callsign [{{callsign}}] in database:
+								{{numberOfSpots}}</p>
+							<p>Earliest recorded spot: {{formattedFromDate}} UTC</p>
+							<p>Most recent recorded spot: {{formattedEndDate}} UTC</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<alert ng-show="selectedRangeMsg">{{selectedRangeMsg}}</alert>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="col-md-6 form-group">
 			<form>
-				<div class="row">
+				<div class="row" style="padding-top: 90px;">
 					<div class="col-md-3">
 						<label for="callsign">Callsign</label>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-7">
 						<input id="callsign" class="form-control" type="text"
-							ng-model="callsign" ng-blur="retrieveSpotSummaryForCallsign()" 
-							popover="Enter a callsign whose uploaded reception spots you want to visualize"  
-							popover-placement="right" popover-trigger="focus"/>
+							ng-model="callsign"
+							popover="Enter a callsign to visualize their uploaded reception data (yours or someone else's)"
+							popover-trigger="focus" />
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-3">
-						<label for="fromDate">Staring from date/time:</label>
-					</div>
-					<div class="col-md-8">
-						<input id="fromDate" class="form-control" ng-model="fromDate"
-							ui-date-format="yy'-'mm'-'dd" ui-date="fromDateOptions"
-							popover="Select a start date and time from which to start vizualizing receiption spots.
-							<p>For callsign [{{callsign}}] there is data available between {{dateFirstSpot}}
-							and {{toDate}}."  
-							popover-placement="right" popover-trigger="focus"/>
-						<timepicker ng-model="fromTime" minute-step="minuteStep"></timepicker>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-3">
-						<label for="toDate">Ending at date:</label>
-					</div>
-					<div class="col-md-8">
-						<input id="toDate" class="form-control" ng-model="toDate"
-							ui-date-format="yy'-'mm'-'dd" ui-date="toDateOptions"
-							popover="End date/time for received spots"  
-							popover-placement="right" popover-trigger="focus"/>
-						<timepicker ng-model="toTime" minute-step="minuteStep"></timepicker>
+					<div class="col-md-2">
+					<button class="btn btn-primary" ng-click="retrieveSpotSummaryForCallsign()">Go!</button>
 					</div>
 				</div>
 
-				<div class="row">
-					<div class="col-md-3">
-						<button class="btn btn-default btn-primary" ng-click="retrieve()">Show
-							data</button>
+				<div class="fadeInHideShow" ng-show="numberOfSpots > 0">
+					<div class="row">
+						<div class="col-md-3">
+							<label for="fromDate">Staring from date/time:</label>
+						</div>
+						<div class="col-md-8">
+							<input id="fromDate" class="form-control" ng-model="fromDate"
+								ui-date-format="yy'-'mm'-'dd" ui-date="fromDateOptions"
+								popover="Select a start date and time from which to start visualizing your reception data.
+								{{popoverTextWhenDataAvailable}}"
+								popover-trigger="focus" />
+							<timepicker ng-model="fromTime" minute-step="minuteStep"></timepicker>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-3">
+							<label for="toDate">Ending at date:</label>
+						</div>
+						<div class="col-md-8">
+							<input id="toDate" class="form-control" ng-model="toDate"
+								ui-date-format="yy'-'mm'-'dd" ui-date="toDateOptions"
+								popover="End date/time for received spots"
+								popover-placement="left" popover-trigger="focus" />
+							<timepicker ng-model="toTime" minute-step="minuteStep"></timepicker>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-3">
+							<button class="btn btn-default btn-primary" ng-click="retrieve()">Retrieve
+								data</button>
+						</div>
 					</div>
 				</div>
 			</form>
 		</div>
-		<div class="col-md-9">
+	</div>
 
-			<div class="row">
-				<div class="col-md-9">
-					<alert ng-show="msg">{{msg}}</alert>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-9">
-					<alert ng-show="errorMsg">{{errorMsg}}</alert>
-				</div>
-			</div>
-			<div class="row" >
-				<div class="col-md-12">
-					<div class="panel panel-default fadeInHideShow" ng-show="numberOfSpots > 1">
-						<div class="panel-heading">
-							<h3 class="panel-title">
-								Available data for callsign: {{callsign}}</h3>
-						</div>
-						<div class="panel-body">
-						
-						<p>Spots by callsign [{{callsign}}] in database: {{numberOfSpots}}</p>
-						<p>Earliest recorded spot: {{dateFirstSpot}}</p>
-						<p>Most recent recorded spot: {{dateLastSpot}}</p>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</div>
 
-		<div class="row" ng-if="showMapControls">
-			<div ng-include src="'mapviz/historyPlaybackControls.html'"></div>
-			<map center="37.7699298, -122.4469157" zoom="10">
-				<marker ng-repeat="pos in positions"
-					position="{{pos.lat}}, {{pos.lng}}"></marker>
-			</map>
-
-		</div>
+	<div class="row" ng-if="showMapControls">
+		<div ng-include src="'mapviz/historyPlaybackControls.html'"></div>
+		<map center="37.7699298, -122.4469157" zoom="10">
+			<marker ng-repeat="pos in positions"
+				position="{{pos.lat}}, {{pos.lng}}"></marker>
+		</map>
 
 	</div>
-</div>
 </div>
