ui layout fixes

--- a/src/main/webapp/mapviz/mapviz.html
+++ b/src/main/webapp/mapviz/mapviz.html
@@ -117,10 +117,14 @@
 
 	<div class="row" ng-if="showMapControls">
 		<div ng-include src="'mapviz/historyPlaybackControls.html'"></div>
-		<map center="37.7699298, -122.4469157" zoom="10">
-			<marker ng-repeat="pos in positions"
-				position="{{pos.lat}}, {{pos.lng}}"></marker>
-		</map>
-
+	</div>
+	<div class="row" ng-if="showMapControls" style="height:450px;">
+		<td class="col-md-offset-1 col-md-10" style="height:450px;">
+			<map style="height:100%" center="37.7699298, -122.4469157" zoom="10">
+				<marker ng-repeat="pos in positions"
+					position="{{pos.lat}}, {{pos.lng}}"></marker>
+			</map>
+		</td>	
+		
 	</div>
 </div>
