--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,1 +1,27 @@
-<h3>Home TODO</h3>
+
+<div class="row">
+	<div class="col-md-3">
+		<h3>Welcome to SpotViz!</h3>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-3">
+		<h4>What is This?</h4>
+		<p>This site provides a historical playback of JT65/JT9 digital
+			mode signals transmitted and received by amateur radio operators,
+			showing patterns of signals over time.</p>
+	</div>
+
+	<div class="col-md-9">
+	<h4>How do I get started?</h4>
+	<p>If you have already uploaded a data log file from WSJT, you can click on 'Visualize' above to
+	pick a data/time range for playback of your data plotted on Google Maps. You can also view
+	anyone else's data that has already been updated - click 'Browse Data'.</p>
+	<p>To upload new data, click 'How To Upload Your Spots'.
+	</p>
+	<p>Got questions? Check the FAQ.</p>
+	</div>
+
+
+</div>
