--- a/src/main/webapp/howToUpload.html
+++ b/src/main/webapp/howToUpload.html
@@ -1,18 +1,33 @@
 <div class="row">
-<h3>How to Upload Your WSJT-X Data Files for Vizualization </h3>
-<p>To upload your data fies, you need to download and run the uploader - for more details see here (TODO).</p>
+	<div class="col-md-12">
+		<h3>How to Upload Your WSJT-X Data Files for Visualization</h3>
+		<p>To upload your data fies, you need to download and run the
+			uploader - for more details see here (TODO).</p>
 
-<p>Depending on the version of WSJT-X and the operating system you are running on, your ALL.TXT data
-file will be in one of the following locations:
+		<p>Depending on the version of WSJT-X and the operating system you
+			are running on, your ALL.TXT data file will be in one of the
+			following locations:</p>
+	</div>
+</div>
 
-<p>On Mac OS X:</p>
+<div class="row">
+	<div class="col-md-12">
+		<p>On Mac OS X:</p>
 
-<p>For versions 1.4+:</p>
-<p>/Users/[your-user-id]/Library/Application Support/WSJT-X/ALL.TXT
+		<p>For versions 1.4+:</p>
+		<p>/Users/[your-user-id]/Library/Application
+			Support/WSJT-X/ALL.TXT</p>
+	</div>
+</div>
 
-<p>On Linux:</p>
+<div class="row">
+	<div class="col-md-12">
+		<p>On Linux:</p>
+	</div>
+</div>
 
-<p>On Windows:</p>
-
-
+<div class="row">
+	<div class="col-md-12">
+		<p>On Windows:</p>
+	</div>
 </div>
