--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,6 +55,7 @@
 				<li><a href="index.html#/mapviz">Visualize!</a></li>
 				<li><a href="index.html#/upload">How to upload your spots</a></li>
 				<li><a href="index.html#/faq">FAQ</a></li>
+				<li><a href="index.html#/bug">Report a bug/enhancement request</a></li>
 				<li><a href="index.html#/about">About</a></li>
 
 			</ul>
