minor wording updates

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,7 +50,7 @@
 	
 		<div id="myjumbotron" class="jumbotron">
 		  <h1>SpotViz</h1>
-		  <p>Historical visualization of received JT65/JT9 signals received by Amateur Radio operators 
+		  <p>Historical visualization of JT65/JT9 signals received by Amateur Radio operators 
 		  around the world.</p>
 			<p>By Kevin Hooke KK6DCT / 
                         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.spotviz.info" data-text="Historical visualization of amateur radio signals" data-via="kevinhooke">Tweet</a>
