--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,7 +8,7 @@
 <div class="row">
 	<div class="col-md-3">
 		<h4>What is This?</h4>
-		<p>This site provides a historical playback of JT65/JT9 digital
+                <p>This site provides a <i>historical playback</i> of JT65/JT9 digital
 			mode signals transmitted and received by amateur radio operators,
 			showing patterns of signals over time.</p>
 	</div>
